[gd_scene load_steps=7 format=3 uid="uid://mnq50a8m85t1"]

[ext_resource type="Theme" uid="uid://dhsgc6k51h0rn" path="res://scenes/ui/game_ui_theme.tres" id="1_1b88r"]
[ext_resource type="Texture2D" uid="uid://b1vfi60g2durw" path="res://assets/ui/basic_ui_sprite.png" id="2_amc1o"]
[ext_resource type="Script" uid="uid://bmjc8yumdowbv" path="res://scenes/ui/day_night_panel.gd" id="2_j2p6q"]
[ext_resource type="Texture2D" uid="uid://cqpvy7kqcxva2" path="res://assets/ui/icon_config.png" id="4_07w8f"]
[ext_resource type="Texture2D" uid="uid://rhir0i11y3bj" path="res://assets/ui/icon_bag.png" id="5_07w8f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_j2p6q"]
atlas = ExtResource("2_amc1o")
region = Rect2(874, 68, 14, 24)

[node name="DayNightPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_1b88r")
script = ExtResource("2_j2p6q")

[node name="DayPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -160.0
offset_bottom = 52.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="DayLabel" type="Label" parent="DayPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "DAY 0"

[node name="TimePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -160.0
offset_top = 56.0
offset_bottom = 108.0
theme_type_variation = &"DayNightCounterPanel"

[node name="MarginContainer" type="MarginContainer" parent="TimePanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="TimeLabel" type="Label" parent="TimePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "00:00"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -160.0
offset_top = 112.0
offset_bottom = 148.0

[node name="NormalSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 52.0
offset_bottom = 36.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/NormalSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -12.0
offset_right = 7.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j2p6q")

[node name="FastSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 54.0
offset_right = 106.0
offset_bottom = 36.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -12.0
offset_right = 11.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j2p6q")

[node name="TextureRect2" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.5
offset_top = -12.0
offset_right = 2.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j2p6q")

[node name="CheetahSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 108.0
offset_right = 160.0
offset_bottom = 36.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/CheetahSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -12.0
offset_right = 15.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j2p6q")

[node name="TextureRect2" type="TextureRect" parent="Control/CheetahSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -12.0
offset_right = 7.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j2p6q")

[node name="TextureRect3" type="TextureRect" parent="Control/CheetahSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -12.0
offset_right = -1.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j2p6q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = -80.0
offset_top = 149.0
offset_right = -1.0
offset_bottom = 321.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = ExtResource("4_07w8f")

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="InventoryButton" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = ExtResource("5_07w8f")

[connection signal="pressed" from="Control/NormalSpeedButton" to="." method="_on_normal_speed_button_pressed"]
[connection signal="pressed" from="Control/FastSpeedButton" to="." method="_on_fast_speed_button_pressed"]
[connection signal="pressed" from="Control/CheetahSpeedButton" to="." method="_on_cheetah_speed_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/InventoryButton" to="." method="_on_inventory_button_pressed"]
